nearly there.. i hope

--- a/notes/notebook/notebook.tex
+++ b/notes/notebook/notebook.tex
@@ -226,7 +226,7 @@ Write $X(\omega)$ as a series
 	X(\omega) = \sum_{n=0}^{\infty} a_n (-i)^n P_n(\omega)
 \end{equation*}
 
-and plug this into the orthogonality relationships to obtain
+since we can plug this into the orthogonality relationship of Legendre polynomails to obtain
 
 \begin{align*}
 	\int_{-\pi}^{\pi} X(\omega) i^m P_m(\omega) d\omega 
